Update repo .md files and change tagging format in workflow